--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -12,7 +12,7 @@ form textarea {
   border-width: 0px;
   border-bottom-style: groove;
   border-bottom-width: 5px;
-  border-bottom-color: black;
+  border-bottom-color: #545149;
   display: block;
 }
 
