--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -28,3 +28,12 @@ form textarea {
 .container tweet-text {
   float: left;
 }
+
+#errMessage {
+  margin-top: 10px;
+  padding: 10px;
+  border: 5px solid red;
+  display: flex;
+  justify-content: flex-start;
+  font-size: medium;
+}
