responsive design added for supporting screen sizes below 1024px and above 1024px

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,9 +1,5 @@
-header {
-  height: 400px;
-  width: 100%;
-  position: relative;
-  text-align: center;
-  background-color: azure;
+.avatar-header {
+  width:100%;
   background-image: url("../images/asfalt-light.png");
   margin-top: 120px;
 }
