--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -13,3 +13,16 @@ nav {
 nav span {
   font-family: "Bungee";
 }
+
+#new-tweet-post {
+  float: right;
+  background-color: #4056A1;
+  color: #ffffff;
+  margin-top: 3em;
+}
+
+@media only screen and (max-width: 1024px) {
+  nav {
+    background-color: coral;
+  }
+}
