minor fixes and comments added

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,5 +1,11 @@
 .avatar-header {
-  width:100%;
+  width:50%;
   background-image: url("../images/asfalt-light.png");
   margin-top: 120px;
+}
+
+@media only screen and (max-width: 1024px) {  
+  .avatar-header {
+    width: 100%;
+  }
 }
