--- a/public/styles/tweet-container.css
+++ b/public/styles/tweet-container.css
@@ -48,6 +48,7 @@ footer {
   height:25px;
   width: 25px;
   margin-right: 5px;
+  visibility: hidden;
 }
 
 .tweet-article .postAge {
@@ -63,6 +64,10 @@ footer {
 .tweet-article:hover {
   box-shadow: 7px 7px #554455;
   display: block;
+}
+
+.tweet-article:hover .footerImgs > img {
+  visibility: visible;
 }
 
 
