--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -27,6 +27,7 @@ body {
 }
 
 .avatar {
+  background-image: url("../images/asfalt-light.png");
   background-color: coral;
   color: #f4f1ec;
   font-family: Bungee;
